fix image on 991px

--- a/styles/main.css
+++ b/styles/main.css
@@ -5533,8 +5533,15 @@ div.lt-invite.lt-pseudo-label {
     margin: 0 auto;
     width: 100%;
   }
+}
+@media screen and (min-width: 769px) and (max-width: 991px) {
   .wrapper-404 {
-    background: #ffffff url(../images/bg-404.jpg) no-repeat 60% center;
+    background: #ffffff url(../images/bg-404.jpg) no-repeat 70% center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper-404 {
+    background: #ffffff url(../images/bg-404.jpg) no-repeat 55% center;
   }
 }
 @media screen and (max-width: 767px) {
